2005-02-24  Audrius Meskauskas  <audriusa@bluewin.ch>

    * gnu/testlet/javax/swing/JFrame/paint5.java: New test.
	
2005-02-24  Audrius Meskauskas  <audriusa@bluewin.ch>

    * gnu/testlet/javax/swing/Timer/preparatory.java: New test.
	* gnu/testlet/javax/swing/Timer/basic.java: New test.
	
2005-02-23  Audrius Meskauskas  <audriusa@bluewin.ch>

    * gnu/testlet/javax/swing/JComboBox/basic.java: New test.
	* gnu/testlet/javax/swing/JComboBox/listenerList.java: New test.
	
2005-02-22  Audrius Meskauskas  <audriusa@bluewin.ch>

    * gnu/testlet/javax/swing/JToggleButton/click.java: New test.

2005-02-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/java/awt/Component/clickModifiers.java: New test.

2005-02-21  Audrius Meskauskas  <audriusa@bluewin.ch>

    gnu/testlet/javax/swing/JTextArea/text.java: new test

2005-02-21  Bryce McKinlay  <mckinlay@redhat.com>

	* batch_run: Remove mention of JLS1.0, JLS1.2, and JAVA2 tags.
	* choose: Likewise.
	* gnu/testlet/java/lang/Boolean/BooleanTest.java,
	gnu/testlet/java/lang/Byte/ByteTest.java,
	gnu/testlet/java/lang/Character/CharacterTest.java,
	gnu/testlet/java/lang/Class/ClassTest.java,
	gnu/testlet/java/lang/Cloneable/CloneableTest.java,
	gnu/testlet/java/lang/Double/DoubleTest.java,
	gnu/testlet/java/lang/Float/FloatTest.java,
	gnu/testlet/java/lang/Integer/IntegerTest.java,
	gnu/testlet/java/lang/Long/LongTest.java,
	gnu/testlet/java/lang/Math/MathTest.java,
	gnu/testlet/java/lang/Number/NumberTest.java,
	gnu/testlet/java/lang/Object/ObjectTest.java,
	gnu/testlet/java/lang/Object/clone.java,
	gnu/testlet/java/lang/Object/oom.java,
	gnu/testlet/java/lang/Object/wait.java,
	gnu/testlet/java/lang/Short/ShortTest.java,
	gnu/testlet/java/lang/String/StringTest.java,
	gnu/testlet/java/lang/StringBuffer/StringBufferTest.java,
	gnu/testlet/java/util/AbstractCollection/AcuniaAbstractCollectionTest.java,
	gnu/testlet/java/util/AbstractCollection/AcuniaAddCollectionTest.java,